[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[project]
name = "aio-panasonic-comfort-cloud"
dynamic = ["version"]
dependencies = [
  "aiohttp",
  "urllib3",
  "bs4",
  "aiofiles",
  "packaging",
]
requires-python = ">=3.10"
authors = [
  {name = "Jimmy Everling", email = "jimmy@sockless.tech"},
]
description = "Asynchronous Python library for Panasonic Comfort Cloud API"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["panasonic", "comfort cloud"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sockless-coding/aio-panasonic-comfort-cloud"
Repository = "https://github.com/sockless-coding/aio-panasonic-comfort-cloud.git"
"Bug Tracker" = "https://github.com/sockless-coding/aio-panasonic-comfort-cloud/issues"
